2006-01-12  Miguel de Icaza  <miguel@novell.com>

	* PeerCred.cs: Turn PeerCredData into a toplevel class and make it
	internal, so it can be used from Mono.Unix.PeerCred.

2006-01-06  Jonathan Pryor  <jonpryor@vt.edu>

	* Catalog.cs: s/libintl/intl/g, since intl.dll is used by GTK+ on Windows,
	  not libintl.dll (according to
	  http://www.gimp.org/~tml/gimp/win32/downloads.html).

2005-09-23  Jonathan Pryor  <jonpryor@vt.edu>

	* Catalog.cs, PeerCred.cs, Syscall.cs, UnixEndPoint.cs: [Obsolete] public
	  types and list appropriate replacement members for Syscall.cs
	  enumerations/structs.

2005-09-20  Jonathan Pryor  <jonpryor@vt.edu>

	* Syscall.cs: Mark types as [CLSCompliant(false)].

2005-05-30  Ben Maurer  <bmaurer@ximian.com>

	* Syscall.cs (UnixEpoch): The DateTime for the start of the epoch
	may not have the same offset from GMT as does the result of
	addition. Therefore, do not convert the static reference point,
	rather convert the date we generate. Fixes bug 74266. Patch from
	fabrice@bellet.info (Fabrice Bellet).

2005-02-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnixEndPoint.cs: get the correct bytes when building the filename from
	a SocketAddress. Fixes bug #72850.

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* Syscall.cs: Add [Obsolete] to Syscall, letting users know they should 
	  use Mono.Unix.Syscall (and related types) instead.  Mono.Posix.Syscall 
	  is effectively unmaintained, and should not be used.

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* Syscall.cs: All syscall_ functions should explicitly specify EntryPoint 
	  so that an EntryPointNotFoundException is avoided.  Fixes 70706.

2004-11-16  Jonathan Pryor  <jonpryor@vt.edu>

	* IncludeAttribute.cs: Removed.
	* MapAttribute.cs: Removed.
	* Syscall.cs: Remove [Map] and [Include] attributes.

2004-07-09  Dick Porter  <dick@ximian.com>

	* PeerCred.cs: Get the unix socket peer credentials.

2004-05-26  Miguel de Icaza  <miguel@ximian.com>
