@@ -1,3 +1,7 @@
+2006-03-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* UnixEndPoint.cs: synch'ed with the one in Mono.Unix.
+
 2006-01-12  Miguel de Icaza  <miguel@novell.com>
 
 	* PeerCred.cs: Turn PeerCredData into a toplevel class and make it
